--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,11 @@
   padding: 0 2rem;
 }
 
-.main {
+/* .container h1 {
+  color: red;
+} */
+
+.container .main {
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
@@ -29,7 +33,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  /* color: #0070f3; */
   text-decoration: none;
 }
 
@@ -115,7 +119,7 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   .card,
   .footer {
     border-color: #222;
@@ -126,4 +130,4 @@
   .logo img {
     filter: invert(1);
   }
-}
+} */
